change directory names and apply changes listed here: - Change the name that shows up in the tab from "Satlantis" to "Bitcoin Chatt" - Add a favcon to the website's tab, using  as the image - Replace the  image in the middle of the page with - In the same size font as the "New to Bitcoin?", "Calendar", and "Map" text, add this tagline, centered on the page and under the Bitcoin Chatt logo: *Lifting Chattanooga onto a Bitcoin standard.* Make sure the font is white and *italicized.* - Make the Bitcoin logo that's over "New to Bitcoin?" smaller, so it's about the same size as the calendar image (probably match the width, since that seems to be the largest measurement on the calendar image) - Do the same for the map image (this might already be the case, but I can't see the map image or the Bitcoin Chatt Logo and title at the top left) - Replace the Twitter/X logo with the one called  file in the shared folder - Use the Nostr logo file called  in the shared folder

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://bitcoinchatt.org/'
 languageCode = 'en-us'
-title = 'Satlantis'
+title = 'Bitcoin Chatt'
 theme = 'main'
 
 [markup.goldmark.renderer]
